--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -27,7 +27,7 @@ body{
 .nav{
 	border: solid black 1px;
 	width: 100%;
-	height: 120px;
+	height: 50px;
 	background-color: black;
 }
 h1{
@@ -42,39 +42,36 @@ h4{
 .conteneur{
 	width:100%;
 	height:700px;
-	display: flex;
-	 flex-direction: row;
-	 flex-wrap: wrap;
 }
 #jeu{
 	width: 700px;
-	height: 800px;
+	height: 710px;
 }
 #regle{
 	z-index: 1;
-	width: 800px;
-	height: 250px;
+	width: 500px;
+	height: 350px;
 	background-color: rgba(255, 255, 255, 0.8);
 	margin: 40px;
 	padding: 10px;
 }
+.element{
+	float: left;
+}
 .button {
-    background-color: lightgrey;
+    background-color: black;
     border: none;
-    color: black;
+    color: lightgrey;
     font-weight: bold;
     padding: 20px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin-left: 40px;
-    margin-top:4px;
+    margin-left: 20px;
+    margin-top:25px;
     cursor: pointer;
     border-radius: 12px;
 }
-#gagne{
-
-}
-#perdu{
-
+h3{
+	color:red;
 }
